tests/paczka2/big_fuzzy/32809687.err
Error in line 5: iZGTi S749 4,5
Error in line 7: iZGTi A459 97,4
Error in line 3: M0cRg3If9i6 S950 3,7
Error in line 14: M0cRg3If9i6 A865 55,0
Error in line 21: iZGTi S950 73,2
Error in line 20: xnqhiY S950 86,4
Error in line 23: iZGTi S749 29,6
Error in line 29: iZGTi S741 30,2
Error in line 30: vNE0LZRfqC S749 72,4
Error in line 34: A459 A459 99,5
Error in line 44: X0L A459 63,3
Error in line 36: A459 S749 49,6
Error in line 51: N8KOx S749 86,2
Error in line 55: A459 A459 58,9
Error in line 42: xnqhiY S950 65,2
Error in line 57: N8KOx S950 53,6
Error in line 67: N8KOx S749 9,45
Error in line 74: N8KOx S749 11,5
Error in line 76: iZGTi S749 72,61
Error in line 60: M0cRg3If9i6 S950 53,8
Error in line 80: iZGTi S749 162,9
Error in line 83: xnqhiY S950 29,1
Error in line 92: N8KOx S950 6,2
Error in line 93: N8KOx A865 89,1
Error in line 98: N8KOx S950 4,1
Error in line 104: N8KOx A865 60,7
Error in line 90: A459 A459 59,8
Error in line 123: iZGTi A865 -2,1
Error in line 125: X0L A865 32,5
Error in line 117: N8KOx S950 51,8
Error in line 137: N8KOx A459 19,2
Error in line 129: iZGTi S749 33,0
Error in line 133: xnqhiY S950 90,5
Error in line 142: iZGTi A459 95,8
Error in line 145: iZGTi S950 51,3
Error in line 163: vNE0LZRfqC S950 38,63
Error in line 167: A459 S749 97,5
Error in line 195: M0cRg3If9i6 S749 77,2
Error in line 208: M0cRg3If9i6 S950 31,2
Error in line 210: xnqhiY A865 41,9
Error in line 211: X0L S950 21,9
Error in line 207: vNE0LZRfqC A865 137,6
Error in line 215: X0L A459 57,6
Error in line 227: M0cRg3If9i6 A459 29,4
Error in line 226: xnqhiY S950 38,6
Error in line 228: M0cRg3If9i6 S749 81,4
Error in line 233: xnqhiY S749 62,1
Error in line 244: A459 S749 123,4
